manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "myakscluster-9de3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "myakscluster-9de3"
  template:
    metadata:
      labels:
        app: "myakscluster-9de3"
    spec:
      containers:
        - name: "myakscluster-9de3"
          image: "kubercont.azurecr.io/myakscluster"
          ports:
          - containerPort: 80
