manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "myakscluster-9de3"
    labels:
        app: "myakscluster-9de3"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: myaksclustera230-myakscluster-9de3.d36ba5578ccd4a3ebeb0.centralindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "myakscluster-9de3"
                servicePort: 80
